<resources>
    <!-- Main activity -->
    <string name="app_name">BluetoothChat</string>
    <string name="action_settings">Settings</string>
    <string name="action_create">Create Chatroom</string>
    <string name="action_join">Join Chatroom</string>

    <!-- bluetooth State -->
    <string name="no_bluetooth">Your device does not support bluetooth. This app cannot be used.</string>
    <string name="bluetooth_disabled_message">Bluetooth is off.</string>
    <string name="bluetooth_enabled_message">Bluetooth is on.</string>
    <string name="bluetooth_turning_off_message">Bluetooth is turning off.</string>
    <string name="bluetooth_turning_on_message">Bluetooth is turning on.</string>
    <string name="enable_bluetooth_label">Enable Bluetooth</string>
    <string name="bluetooth_name_label">Your bluetooth name</string>

    <!-- SetupServerActivity -->
    <string name="accepted_clients_label">Accepted clients</string>
    <string name="found_clients_label">Found clients</string>
    <string name="start_chatroom_label">Start Chatroom</string>
    <string name="menu_swap">swap</string>
    <string name="menu_remove">remove</string>

    <!-- SetupServerActivity status -->
    <string name="status_no_clients">Waiting for a client to connect</string>
    <string name="status_no_accepted_clients">At least one client must be connected</string>
    <string name="status_accepted_clients">Chatroom can be started</string>

    <!-- PairingActivity -->
    <string name="pairing_label_found_devices">Found bluetooth devices</string>
    <string name="pairing_label_status">Status</string>

    <string name="pairing_action_click_fab">Click bottom right button to search for bluetooth devices.</string>
    <string name="pairing_action_click_btd">Select a Bluetooth device to connect to.</string>
    <string name="pairing_action_waiting">Waiting for host to start.</string>

    <string name="pairing_message_searching">Searching for bluetooth devices.</string>
    <string name="pairing_message_search_finished">Finished searching for bluetooth devices.</string>
    <string name="pairing_message_search_failed">No bluetooth devices found.</string>
    <string name="pairing_message_connecting">Connecting to the bluetooth host.</string>
    <string name="pairing_message_connected">Connected to the bluetooth host.</string>
    <string name="pairing_message_connect_failed">Could not connected to the bluetooth host.</string>
    <string name="pairing_message_connection_closed">Connection has been closed.</string>

    <!-- PairingActivity status -->
    <string name="status_not_finding">Not currently looking for a Server</string>
    <string name="status_finding">Looking for Bluetooth devices</string>
    <string name="status_found">Select a server to connect to</string>
    <string name="status_not_found">No nearby Bluetooth devices found</string>
    <string name="status_connecting">Attempting to connect to the server</string>
    <string name="status_connect_failed">Unable to connect to the server</string>
    <string name="status_connect_declined">Connection was declined by server</string>
    <string name="status_connect_canceled">Connection was canceled by user</string>
    <string name="status_connected">Connected, waiting for server to begin</string>
    <string name="cancel_connection">Cancel connection</string>

    <!-- ChatroomActivity -->
    <string name="title_activity_chatroom">ChatroomActivity</string>
</resources>
