<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/server_status_label"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:textColor="@color/secondaryText"
            android:text="@string/pairing_label_status"/>

        <include
            android:id="@+id/msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/server_status_label"
            layout="@layout/bluetooth_activity_status"/>

        <TextView
            android:id="@+id/paired_devices_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/msg"
            android:background="#aaaaaaaa"
            android:text="@string/accepted_clients_label"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/connected_devices_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingTop="20dp"
            android:layout_below="@id/paired_devices_label"/>

        <TextView
            android:id="@+id/found_devices_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/connected_devices_recycler_view"
            android:background="#aaaaaaaa"
            android:text="@string/found_clients_label"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/unconnected_devices_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingTop="20dp"
            android:layout_below="@id/found_devices_label"/>

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/unconnected_devices_recycler_view"
            android:layout_centerHorizontal="true"
            android:enabled="false"
            android:onClick="startChatroom"
            android:text="@string/start_chatroom_label"/>

    </RelativeLayout>

</ScrollView>