<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingBottom="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/status_waiting"/>

        <TextView
            android:id="@+id/bluetooth_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_below="@id/status_message"
            android:text="@string/bluetooth_name_label"/>

        <TextView
            android:id="@+id/bluetooth_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignBaseline="@id/bluetooth_name_label"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:text="BluetoothId"/>



        <TextView
            android:id="@+id/paired_devices_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/bluetooth_name_label"
            android:background="#aaaaaaaa"
            android:text="@string/accepted_clients_label"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/connected_devices_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/paired_devices_label"/>

        <TextView
            android:id="@+id/found_devices_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/connected_devices_recycler_view"
            android:background="#aaaaaaaa"
            android:text="@string/found_clients_label"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/unconnected_devices_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/found_devices_label"/>

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/unconnected_devices_recycler_view"
            android:layout_centerHorizontal="true"
            android:enabled="false"
            android:onClick="startChatroom"
            android:text="@string/start_chatroom_label"/>

    </RelativeLayout>

</ScrollView>